--- a/Java Spring/ninjagold/src/main/resources/static/CSS/style.css
+++ b/Java Spring/ninjagold/src/main/resources/static/CSS/style.css
@@ -7,6 +7,7 @@ body {
 img {
 	height:200px;
 	width:400px;
+	border: 2px solid darkgreen;
 }
 
 .mainFrame {
@@ -86,9 +87,10 @@ img {
 }
 
 .activityBox{
-		margin: 0 auto;
+		margin: 0 10%;
+		padding:5px;
 		border:2px solid darkgreen;
-		width:80%;
+		width:50%;
 		height:30%;
 		overflow-y: auto;
 		background-color:#E3E5E6;
