--- a/Java Spring/burgertracker/src/main/resources/static/CSS/style.css
+++ b/Java Spring/burgertracker/src/main/resources/static/CSS/style.css
@@ -69,7 +69,7 @@ th, td {
 	width:25%;
 	margin-left: 65%;
 	margin-top:2%;
-	
+	box-shadow: 8px 8px 8px 8px rgba(255,7,58, 0.6);
 }
 
 .formation {
