--- a/Java Spring/burgertracker/src/main/resources/static/CSS/style.css
+++ b/Java Spring/burgertracker/src/main/resources/static/CSS/style.css
@@ -17,8 +17,14 @@ h2{
 	margin-left:15px;
 }
 
+.imgBox {
+	display:flex;
+	justify-content:center;	
+	width:80%;
+	margin: 3% auto;
+}
+
 img{
-	margin-left:30%;
 	border-radius:20px;
 	box-shadow: 6px 6px 6px 6px rgba(255,7,58, 0.6);
 }
