--- a/Java Spring/lookify/src/main/resources/static/CSS/style.css
+++ b/Java Spring/lookify/src/main/resources/static/CSS/style.css
@@ -1,1 +1,51 @@
 @charset "ISO-8859-1";
+
+body{
+	background-color:lightgrey;
+}
+
+.welcome {
+	width: 40%;
+	margin: 0 auto;
+	margin-top:100px;
+	display:flex;
+	justify-content:center;
+}
+
+.navbar {
+	display:flex;
+	justify-content:space-evenly;
+}
+
+.searchformContainer {
+	display:flex;
+}
+
+.searchArtist {
+	font-size:30px;
+	font-weight:700;
+	background-color:white;
+	color:blue;
+	width:300px;
+}
+
+.searchbutton {
+	font-size:30px;
+	font-weight:700;
+	background-color:white;
+	color:blue;
+}
+
+#displayTable {
+	width:80%;
+	min-width:420px;
+	margin:0 auto;
+	padding:15px;
+	border: 4px double blue;
+	border-radius: 10px;
+	text-align:center;
+}
+
+tr {
+	background-color: blanchalmond;
+}
