--- a/Java Spring/authentication/src/main/resources/static/CSS/style2.css
+++ b/Java Spring/authentication/src/main/resources/static/CSS/style2.css
@@ -14,8 +14,30 @@ body {
 	padding:1% 5%;
 }
 
-h1, h3, a {
+h1, h3 {
 	color:white;
 	text-decoration:none;
 }
 
+a {
+	color:blue;
+}
+
+
+.tableContainer {
+	padding:2%;
+}
+
+#displayTable {
+	width:40%;
+	min-width:420px;
+	margin:0 auto;
+	padding:15px;
+	border: 4px double #3E37F2;
+	border-radius: 10px;
+	text-align:center;
+}
+
+tr {
+	background-color: lightgrey;
+}
