making update work and check in/out work

--- a/Java Spring/bookbroker/src/main/resources/static/CSS/style2.css
+++ b/Java Spring/bookbroker/src/main/resources/static/CSS/style2.css
@@ -61,3 +61,11 @@ tr {
 	display:flex;
 	justify-content:center;
 }
+
+.checkout {
+	width:150px;
+	border:none;
+	background:none;
+	color:blue;
+	text-decoration:underline;
+}
