--- a/Java Spring/overflowdojo/src/main/resources/static/CSS/dashboard.css
+++ b/Java Spring/overflowdojo/src/main/resources/static/CSS/dashboard.css
@@ -22,9 +22,13 @@ body {
 	padding:1% 7%;
 }
 
-h1, h3 {
+h1, h3, h4 {
 	color:white;
 	text-decoration:none;
+}
+
+h4{
+	text-align:center;
 }
 
 /* hamburger */
