--- a/Java Spring/tvshows/src/main/resources/static/CSS/comment.css
+++ b/Java Spring/tvshows/src/main/resources/static/CSS/comment.css
@@ -9,7 +9,7 @@
 
 
 body {
-	background: silver;
+	background: #23242a;
 
 }
 
@@ -22,9 +22,13 @@ body {
 	padding:1% 5%;
 }
 
-h1, h3 {
+h1,h2, h3, h4 {
 	color:white;
 	text-decoration:none;
+}
+
+h2 {
+	color:lightgrey;
 }
 
 a {
@@ -32,7 +36,7 @@ a {
 }
 
 .formContainer {
-	width:45%;
+	width:25%;
 	min-width:300px;
 	margin:4% auto;
 	padding:15px;
@@ -81,4 +85,8 @@ label {
 
 .comment{
 	margin-left:5%;
+}
+
+.by {
+	color:lightblue;
 }
