--- a/Java Spring/tvshows/src/main/resources/static/CSS/dash.css
+++ b/Java Spring/tvshows/src/main/resources/static/CSS/dash.css
@@ -46,7 +46,7 @@ a {
 }
 
 #displayTable {
-	width:40%;
+	width:60%;
 	min-width:420px;
 	margin:0 auto;
 	padding:15px;
@@ -56,5 +56,15 @@ a {
 }
 
 tr {
-	background-color: lightgrey;
+	background-color: darkgrey;
 }
+
+ .likes {
+ color:red;
+ text-decoration:none;
+	font-size:20px;
+ }
+ .rent {
+	font-size:20px;
+	text-decoration:none;
+ }
