--- a/Java Spring/tvshows/src/main/resources/static/CSS/viewone.css
+++ b/Java Spring/tvshows/src/main/resources/static/CSS/viewone.css
@@ -59,7 +59,7 @@ a {
 	margin:0 auto;
 	margin-top:5px;
 	display:flex;
-	justify-content:center
+	justify-content:space-between;
 }
 
 .button{
@@ -67,4 +67,5 @@ a {
 	color:white;
 	border:2px solid white;
 	border-radius:5px;
+	padding:5px;
 }
