--- a/Java Spring/myjavaproject/src/main/resources/static/CSS/oneview.css
+++ b/Java Spring/myjavaproject/src/main/resources/static/CSS/oneview.css
@@ -178,32 +178,61 @@ h1, h3 {
 
 
 
+/*  User info section  */
 
-
-
-
-h2 {
-	color:white;
+.boxtitle {
+	display:flex;
+	justify-content:space-between;
+	align-items:center;
 }
-	
+
+.updatelink{
+	text-decoration:none;
+	background-color:#3E37F2;
+	color:white;
+	border:2px solid white;
+	border-radius:5px;
+	padding:5px;
+	font-size:22px;
+}
+
+.viewOneContainer {
+	width: 40%;
+	min-width:420px;
+	margin:3% auto;
+	padding:15px;
+	border: 4px double #3E37F2;
+	border-radius: 5px;
+	background-color:grey;
+}
+
+.flexControl{
+	display:flex;
+	justify-content:space-between;
+}
+
+.rightSide {
+	text-align:start;
+}
 
 
 .links{
-	margin: 1% 20%;
+	margin: 2% 30%;
 }
 
 
+/*  Table section  */
 
 .tableContainer {
 	padding:2%;
 }
 
 #displayTable {
-	width:60%;
+	width:40%;
 	min-width:420px;
 	margin:0 auto;
 	padding:15px;
-	border: 4px double #3E37F2;
+	border: 4px double grey;
 	border-radius: 10px;
 	text-align:center;
 }
