--- a/Java Spring/project_manager/src/main/resources/static/CSS/style2.css
+++ b/Java Spring/project_manager/src/main/resources/static/CSS/style2.css
@@ -27,14 +27,14 @@ a {
 	display:flex;
 	justify-content:space-between;
 	width:80%;
-	margin:2% auto;
+	margin:10px auto;
 	
 }
 .tableContainer {
 	padding:2%;
 }
 
-#displayTable {
+.displayTable {
 	width:50%;
 	min-width:420px;
 	margin:0 auto;
