--- a/Java Spring/project_manager/src/main/resources/static/CSS/resultTables.css
+++ b/Java Spring/project_manager/src/main/resources/static/CSS/resultTables.css
@@ -9,15 +9,20 @@ body {
 	background: white;
 }
 
-h1, h3, h5, a, p, th {
+h1, h3, h5, a, p{
 	color:#A54657;
 	margin:0;
 	text-transform: capitalize;
 }
 
-h2, h4, .blue {
-	color: #454E9E;
+h2, h4, th, .blue, .blue2 {
+	color: #454E9E !important;
 	text-transform: capitalize;
+}
+
+.blue2{
+	text-align:end;
+	margin-left:100px
 }
 
 a,p {
@@ -25,32 +30,40 @@ a,p {
 	text-transform: capitalize;
 }
 
+a {
+	position:relative;
+}
+
 a:hover {
 	color: #454E9E;
 	}
+	
+a:active {
+	top:3px
+}
 
 .nav {
 	display:flex;
-	justify-content:space-between;
-	align-items:center;
-	align-content:center;
+	flex-direction:column;
+	align-content:flex-start;
 	background:#0E0004;
 	border-bottom: 8px double #7FB069;
-	padding:1% 5%;
+	padding:10px 5%;
 	height:120px;
 }
 
 .flex{
 	display:flex;
 	justify-content:space-between;
-	width:80%;
+	max-width:60%;
+	min-width:500px;
 	margin:10px auto;
 	
 }
 
 .displayTable {
 	text-align:center;
-	width:50%;
+	width:60%;
 	min-width:420px;
 	margin:0 auto 10px;
 	padding:15px;
@@ -58,21 +71,26 @@ a:hover {
 	border-radius: 5px;
 }
 
-td {
-	vertical-align: middle;
-	
+tr {
+	height:70px;	
 }
 
 td,th {
 	background-color: #E1E2EF !important;
 }
 
-th {
-	color:#A54657 !important;
+td {
+	vertical-align: middle;
 }
 
+th {
+	font-weight:800;
+}
+
+
 hr {
-	 margin:0;
+	 margin:0 auto;
 	 border-top: 1px solid #454E9E;
+	 width:65%;
 }
 
