--- a/Java Spring/project_manager/src/main/resources/static/CSS/oneProject.css
+++ b/Java Spring/project_manager/src/main/resources/static/CSS/oneProject.css
@@ -32,7 +32,13 @@ a,p {
 
 a:hover {
 	color: #454E9E;
-	}
+}
+
+hr {
+	 margin: 5px auto;
+	 border-top: 1px solid #454E9E;
+	 width:85%;
+}
 
 .nav {
 	display:flex;
@@ -68,6 +74,7 @@ a:hover {
 .rightSide, .small, taskText {
 	text-align:end;
 	margin:0;
+	color: #454E9E;
 }
 
 .small {
@@ -83,8 +90,7 @@ a:hover {
 }
 
 .viewOneContainer {
-	width: 50%;
-	min-width:380px;
+	width:500px;
 	margin: 20px auto 0;
 	padding:15px;
 	border: 6px double #7FB069;
@@ -93,8 +99,7 @@ a:hover {
 }
 
 .viewTwoContainer {
-	width: 50%;
-	max-width:1000px;
+	width:500px;
 	margin: 0 auto 10px;
 	column-gap: 4%;
 	display:flex;
@@ -105,9 +110,7 @@ a:hover {
 
 .teamMembers, .tasks {
 	margin-top: 20px;
-	width: 48%;
-	max-width:1000px;
-	min-width: 380px;
+	width: 100%;
 	padding:20px;
 	border: 6px double #7FB069;
 	border-radius: 5px;
@@ -132,18 +135,18 @@ a:hover {
 .button {
 	position: relative;
 	width: 100px;
+	height: 30px;	
 	border: 2px solid #A54657;
 	border-radius: 5px;
 	font-weight: 700;
-	padding: 3px
+	padding: 3px;
+	display:flex;
+	justify-content:center;
+	align-items:center;
 }
 
 .button:active {
 	top: 2px;
-}
-
-.submit {
-	height: 51px;	
 }
 
 .edit, .submit {
@@ -182,6 +185,10 @@ a:hover {
 	color: #E1E2EF;
 }
 
+.link {
+	text-decoration:none;	
+}
+
 .ticketFlex {
 	display:flex;
 	justify-content:center;
@@ -190,7 +197,8 @@ a:hover {
 
 .taskText {
 	width:275px;
-	text-align:start
+	text-align:start;
+	color: #454E9E;
 }
 
 .input {
@@ -199,7 +207,7 @@ a:hover {
 	border-radius:5px;
 	color: #454E9E;
 	min-width:140px;
-	width:250px;
+	width:300px;
 	caret-color: #454E9E;
 	padding-left:5px;
 }
