--- a/Java Spring/project_manager/src/main/resources/static/CSS/loginReg.css
+++ b/Java Spring/project_manager/src/main/resources/static/CSS/loginReg.css
@@ -20,10 +20,6 @@ a {
 	position:relative;
 }
 
-a:active {
-	top:3px;
-}
-
 .nav {
 	display:flex;
 	justify-content:space-between;
@@ -112,7 +108,7 @@ label {
 	color: #E1E2EF;
 }
 
-.button:active {
+.button:active,a:active {
 	top: 2px;
 }
 
