--- a/Java Spring/project_manager/src/main/resources/static/CSS/resultTables.css
+++ b/Java Spring/project_manager/src/main/resources/static/CSS/resultTables.css
@@ -22,7 +22,7 @@ h2, h4, th, .blue, .blue2 {
 
 .blue2{
 	text-align:end;
-	margin-left:100px
+	margin-left:100px;
 }
 
 a,p {
@@ -36,7 +36,7 @@ a {
 
 a:hover {
 	color: #454E9E;
-	}
+}
 	
 a:active {
 	top:3px
@@ -57,8 +57,7 @@ a:active {
 	justify-content:space-between;
 	max-width:60%;
 	min-width:500px;
-	margin:10px auto;
-	
+	margin:10px auto;	
 }
 
 .displayTable {
@@ -87,10 +86,8 @@ th {
 	font-weight:800;
 }
 
-
 hr {
 	 margin:0 auto;
 	 border-top: 1px solid #454E9E;
 	 width:65%;
 }
-
