--- a/Java Spring/project_manager/src/main/resources/static/CSS/indexStyle.css
+++ b/Java Spring/project_manager/src/main/resources/static/CSS/indexStyle.css
@@ -23,18 +23,19 @@ a:active {
 
 .nav {
 	display:flex;
-	justify-content:space-between;
-	align-items:center;
+	flex-direction:column;
+	align-content:flex-start;
 	background:#0E0004;
 	border-bottom: 8px double #7FB069;
-	padding:1% 5%;
+	padding:10px 5%;
+	height:120px;
 }
 
 .container {
 	width:50%;
 	min-width:500px;
-	margin:6% auto;
-	padding:10px 5% 10px 5%;
+	margin: 10% auto;
+	padding:10px 10px 10px 10px;
 	border: 6px double #7FB069;
 	border-radius: 5px;
 	background-color: #E1E2EF;
@@ -43,6 +44,14 @@ a:active {
 	transform: translateX( -50%);
 	display:flex;
 	flex-direction:column;
+}
+
+.center {
+	text-align:center
+}
+
+.content {
+	margin:0 auto
 }
 
 .flex {
