notes for what pages each style sheet applies to

--- a/Java Spring/project_manager/src/main/resources/static/CSS/menuStyle.css
+++ b/Java Spring/project_manager/src/main/resources/static/CSS/menuStyle.css
@@ -1,4 +1,5 @@
-/* MENU AND NAV STYLING FOR ALL PAGES */
+
+/* MENU AND NAV STYLING FOR: DASHBOARD, MY PROJ, COMPLETED PROJ, NEW PROJ, EDIT PROJ, ONE PROJ */
 
 @charset "ISO-8859-1";
 
